--- a/examples/Makefile
+++ b/examples/Makefile
@@ -19,7 +19,7 @@ CFLAGS  = -g -O0
 CFLAGS += $(DEBUG)   
 LFLAGS  =   -l m  
 
-TARGET  = Mathieu_ode_example  
+all : Mathieu_ode_example  Hysteresis_ode_example  
 
 $(DIR_O)/%.o : $(DIR_N)/%.c
 	$(CC) $(CFLAGS) -c  $< -o   $@  
@@ -27,11 +27,18 @@ $(DIR_O)/%.o : $(DIR_N)/%.c
 $(DIR_O)/%.o : $(DIR_C)/%.c
 	$(CC) $(CFLAGS) -c  $< -o   $@  
 
-$(TARGET) : $(DIR_O)/Mathieu_ode_example.o $(DIR_O)/HPGutil.o $(DIR_O)/NRutil.o  $(DIR_O)/HPGsignal.o $(DIR_O)/HPGmatrix.o   $(DIR_O)/HPGode.o
-	$(CC) $(CFLAGS)  $^ -o   $@  $(LFLAGS)
+Mathieu_ode_example : $(DIR_O)/Mathieu_ode_example.o $(DIR_O)/HPGutil.o $(DIR_O)/NRutil.o  $(DIR_O)/HPGsignal.o $(DIR_O)/HPGmatrix.o   $(DIR_O)/HPGode.o
+	$(CC) $(CFLAGS) $^ -o $@ $(LFLAGS)
+
+Hysteresis_ode_example : $(DIR_O)/Hysteresis_ode_example.o  $(DIR_O)/HPGutil.o $(DIR_O)/NRutil.o  $(DIR_O)/HPGsignal.o $(DIR_O)/HPGmatrix.o   $(DIR_O)/HPGode.o
+	$(CC) $(CFLAGS) $^ -o $@ $(LFLAGS)
+
+#	$(CC) $(CFLAGS) -c  $< -o $@  $(LFLAGS)
+#	$(CC) $(CFLAGS) -c  $^ -o $@  $(LFLAGS)
+
 
 install:
-	chown root $(TARGET); chmod u+s $(TARGET); mv $(TARGET) /usr/local/bin/.
+	chown root Mathieu_ode_example  Hysteresis_ode_example ; chmod u+s Mathieu_ode_example  Hysteresis_ode_example  ; mv Mathieu_ode_example  Hysteresis_ode_example   /usr/local/bin/.
 
 clean:
 	rm $(DIR_O)/*.o 
