--- a/examples/Makefile
+++ b/examples/Makefile
@@ -33,12 +33,8 @@ Mathieu_ode_example : $(DIR_O)/Mathieu_ode_example.o $(DIR_O)/HPGutil.o $(DIR_O)
 Hysteresis_ode_example : $(DIR_O)/Hysteresis_ode_example.o  $(DIR_O)/HPGutil.o $(DIR_O)/NRutil.o  $(DIR_O)/HPGsignal.o $(DIR_O)/HPGmatrix.o   $(DIR_O)/HPGode.o
 	$(CC) $(CFLAGS) $^ -o $@ $(LFLAGS)
 
-#	$(CC) $(CFLAGS) -c  $< -o $@  $(LFLAGS)
-#	$(CC) $(CFLAGS) -c  $^ -o $@  $(LFLAGS)
-
-
 install:
-	chown root Mathieu_ode_example  Hysteresis_ode_example ; chmod u+s Mathieu_ode_example  Hysteresis_ode_example  ; mv Mathieu_ode_example  Hysteresis_ode_example   /usr/local/bin/.
+	chown root *_example ;  chmod u+s *_example ;  mv *_example /usr/local/bin/.
 
 clean:
 	rm $(DIR_O)/*.o 
