move cDiff to HPGutil

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -27,10 +27,10 @@ $(DIR_O)/%.o : $(DIR_N)/%.c
 $(DIR_O)/%.o : $(DIR_C)/%.c
 	$(CC) $(CFLAGS) -c  $< -o   $@  
 
-Mathieu_ode_example : $(DIR_O)/Mathieu_ode_example.o $(DIR_O)/HPGutil.o $(DIR_O)/NRutil.o  $(DIR_O)/HPGsignal.o $(DIR_O)/HPGmatrix.o   $(DIR_O)/HPGode.o
+Mathieu_ode_example : $(DIR_O)/Mathieu_ode_example.o $(DIR_O)/HPGutil.o $(DIR_O)/NRutil.o $(DIR_O)/HPGode.o
 	$(CC) $(CFLAGS) $^ -o $@ $(LFLAGS)
 
-Hysteresis_ode_example : $(DIR_O)/Hysteresis_ode_example.o  $(DIR_O)/HPGutil.o $(DIR_O)/NRutil.o  $(DIR_O)/HPGsignal.o $(DIR_O)/HPGmatrix.o   $(DIR_O)/HPGode.o
+Hysteresis_ode_example : $(DIR_O)/Hysteresis_ode_example.o  $(DIR_O)/HPGutil.o $(DIR_O)/NRutil.o $(DIR_O)/HPGode.o
 	$(CC) $(CFLAGS) $^ -o $@ $(LFLAGS)
 
 install:
